Reformat source files to use spaces instead of tabs.